--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ node_modules
 .c9/
 *.launch
 .settings/
+*.sublime-project
 *.sublime-workspace
 
 # IDE - VSCode
@@ -110,3 +111,4 @@ $RECYCLE.BIN/
 # Others
 lib/
 data/
+config/development.json
