--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "feathers-socketio": "^2.0.0",
     "helmet": "^3.6.1",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "mongoose": "^4.11.0",
     "mongoose-type-email": "^1.0.5",
     "passport-facebook": "^2.1.1",
