--- a/package.json
+++ b/package.json
@@ -29,22 +29,21 @@
     "mocha": "mocha test/ --recursive"
   },
   "dependencies": {
+    "@feathersjs/authentication": "^2.1.2",
+    "@feathersjs/authentication-jwt": "^2.0.0",
+    "@feathersjs/authentication-local": "^1.1.0",
+    "@feathersjs/authentication-oauth2": "^1.0.3",
+    "@feathersjs/configuration": "^1.0.2",
+    "@feathersjs/errors": "^3.3.0",
+    "@feathersjs/express": "^1.2.0",
+    "@feathersjs/feathers": "^3.1.3",
+    "@feathersjs/socketio": "^3.2.0",
     "body-parser": "^1.17.2",
     "compression": "^1.6.2",
     "cors": "^2.8.3",
-    "feathers": "^2.1.4",
-    "feathers-authentication": "^1.2.6",
     "feathers-authentication-hooks": "^0.1.4",
-    "feathers-authentication-jwt": "^0.3.2",
-    "feathers-authentication-local": "^0.4.3",
-    "feathers-authentication-oauth2": "^0.2.5",
-    "feathers-configuration": "^0.4.1",
-    "feathers-errors": "^2.8.2",
-    "feathers-hooks": "^2.0.1",
     "feathers-hooks-common": "^3.5.5",
     "feathers-mongoose": "^5.1.0",
-    "feathers-rest": "^1.8.0",
-    "feathers-socketio": "^2.0.0",
     "helmet": "^3.6.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
