--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,9 @@
     "node": true,
     "mocha": true
   },
+  "parserOptions": {
+    "ecmaVersion": 2018
+  },
   "extends": "eslint:recommended",
   "rules": {
     "indent": [
@@ -20,7 +23,7 @@
     ],
     "semi": [
       "error",
-      "always"
+      "never"
     ]
   }
 }
