--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,11 +19,13 @@
     ],
     "quotes": [
       "error",
-      "single"
+      "single",
+      { "allowTemplateLiterals": true }
     ],
     "semi": [
       "error",
       "never"
-    ]
+    ],
+    "no-console": ["error", { "allow": ["warn", "error"] }]
   }
 }
