--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "eslint": "^4.1.1",
+    "feathers-memory": "^2.1.1",
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
     "request": "^2.81.0",
