--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "eslint": "eslint src/. test/. --config .eslintrc.json",
     "start": "node src/",
     "dev": "nodemon src/",
-    "mocha": "mocha test/ --recursive"
+    "clean": "shx rm -rf test/data/",
+    "mocha": "NODE_ENV=test node test/cleandb.js && NODE_ENV=test mocha test/ --recursive --exit"
   },
   "dependencies": {
     "@feathersjs/authentication": "^2.1.2",
@@ -58,6 +59,7 @@
     "eslint": "^4.1.1",
     "feathers-memory": "^2.1.1",
     "mocha": "^3.4.2",
+    "mongo-clean": "^2.0.0",
     "nodemon": "^1.11.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
