--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,6 @@
       "error",
       "never"
     ],
-    "no-console": ["error", { "allow": ["warn", "error"] }]
+    "no-console": ["error", { "allow": ["warn", "log"] }]
   }
 }
