--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "homepage": "",
   "main": "src",
   "keywords": [
-    "feathers"
+    "yoga",
+    "attendance",
+    "api"
   ],
   "author": {
     "name": "Gustavo Guichard",
@@ -34,7 +36,6 @@
     "@feathersjs/authentication": "^2.1.2",
     "@feathersjs/authentication-jwt": "^2.0.0",
     "@feathersjs/authentication-local": "^1.1.0",
-    "@feathersjs/authentication-oauth2": "^1.0.3",
     "@feathersjs/configuration": "^1.0.2",
     "@feathersjs/errors": "^3.3.0",
     "@feathersjs/express": "^1.2.1",
@@ -51,14 +52,11 @@
     "moment": "^2.22.0",
     "mongoose": "^4.11.0",
     "mongoose-type-email": "^1.0.5",
-    "passport-facebook": "^2.1.1",
-    "passport-google-oauth20": "^1.0.0",
     "serve-favicon": "^2.4.3",
     "winston": "^2.3.1"
   },
   "devDependencies": {
     "eslint": "^4.1.1",
-    "feathers-memory": "^2.1.1",
     "istanbul": "^1.1.0-alpha.1",
     "mocha": "^3.4.2",
     "mongo-clean": "^2.0.0",
