--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ services: mongodb
 install:
   - npm install -g codecov
 script:
-  - istanbul cover ./node_modules/mocha/bin/_mocha --reporter lcovonly -- -R spec
+  - npm run coverage
   - codecov
