--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: node_js
 node_js:
-  - "8"
+  - "8.10.0"
 cache:
   directories:
     - node_modules
 services: mongodb
+before_install:
+  - npm install -g npm@latest
 install:
   - npm install -g codecov
 script:
