--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache:
     - node_modules
 services: mongodb
 before_install:
-  - npm install -g npm@latest
+  - npm install -g npm@6.1.0
 install:
   - npm install -g codecov
 script:
