--- a/package.json
+++ b/package.json
@@ -25,12 +25,11 @@
   },
   "scripts": {
     "test": "npm run eslint && npm run mocha",
-    "coverage": "npm run clean && NODE_ENV=test istanbul cover node_modules/mocha/bin/_mocha -- test/ --recursive --exit",
+    "coverage": "NODE_ENV=test istanbul cover node_modules/mocha/bin/_mocha -- test/ --recursive --exit",
     "eslint": "eslint src/. test/. --config .eslintrc.json",
     "start": "node src/",
     "dev": "nodemon src/",
-    "clean": "NODE_ENV=test node test/cleandb.js",
-    "mocha": "npm run clean && NODE_ENV=test mocha test/ --recursive --exit"
+    "mocha": "NODE_ENV=test mocha test/ --recursive --exit"
   },
   "dependencies": {
     "@feathersjs/authentication": "^2.1.5",
@@ -62,7 +61,6 @@
     "eslint": "^4.19.1",
     "istanbul": "^1.1.0-alpha.1",
     "mocha": "^3.4.2",
-    "mongo-clean": "^2.0.0",
     "nodemon": "^1.17.5",
     "request": "^2.87.0",
     "request-promise": "^4.2.1"
