--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,28 +4,10 @@
     "node": true,
     "mocha": true
   },
-  "parserOptions": {
-    "ecmaVersion": 2018
-  },
-  "extends": "eslint:recommended",
+  "extends": "eslint-config-seasoned",
   "rules": {
-    "indent": [
-      "error",
-      2
-    ],
-    "linebreak-style": [
-      "error",
-      "unix"
-    ],
-    "quotes": [
-      "error",
-      "single",
-      { "allowTemplateLiterals": true }
-    ],
-    "semi": [
-      "error",
-      "never"
-    ],
-    "no-console": ["error", { "allow": ["warn", "log"] }]
+    "sort-keys": 0,
+    "no-underscore-dangle": 0,
+    "no-param-reassign": 0
   }
 }
