--- a/package.json
+++ b/package.json
@@ -32,36 +32,37 @@
     "mocha": "NODE_ENV=test mocha test/ --recursive --exit"
   },
   "dependencies": {
-    "@feathersjs/authentication": "^2.1.5",
-    "@feathersjs/authentication-jwt": "^2.0.1",
-    "@feathersjs/authentication-local": "^1.2.1",
-    "@feathersjs/authentication-oauth2": "^1.0.3",
-    "@feathersjs/configuration": "^1.0.2",
-    "@feathersjs/errors": "^3.3.0",
-    "@feathersjs/express": "^1.2.2",
-    "@feathersjs/feathers": "^3.1.5",
-    "@feathersjs/socketio": "^3.2.1",
+    "@feathersjs/authentication": "^2.1.13",
+    "@feathersjs/authentication-jwt": "^2.0.7",
+    "@feathersjs/authentication-local": "^1.2.7",
+    "@feathersjs/authentication-oauth2": "^1.2.5",
+    "@feathersjs/configuration": "^2.0.4",
+    "@feathersjs/errors": "^3.3.4",
+    "@feathersjs/express": "^1.2.7",
+    "@feathersjs/feathers": "^3.2.3",
+    "@feathersjs/socketio": "^3.2.7",
     "body-parser": "^1.18.3",
-    "compression": "^1.6.2",
-    "cors": "^2.8.3",
-    "feathers-authentication-hooks": "^0.1.4",
-    "feathers-hooks-common": "^4.11.0",
-    "feathers-mongoose": "^5.1.0",
-    "helmet": "^3.12.1",
-    "lodash": "^4.17.10",
+    "compression": "^1.7.3",
+    "cors": "^2.8.5",
+    "feathers-authentication-hooks": "^0.3.1",
+    "feathers-hooks-common": "^4.19.0",
+    "feathers-mongoose": "^6.2.0",
+    "helmet": "^3.15.0",
+    "lodash": "^4.17.11",
     "md5": "^2.2.1",
-    "moment": "^2.22.1",
-    "mongoose": "^4.13.14",
+    "moment": "^2.22.2",
+    "mongoose": "^5.3.13",
     "mongoose-type-email": "^1.0.9",
     "serve-favicon": "^2.5.0",
-    "winston": "^2.4.2"
+    "winston": "^3.1.0"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "istanbul": "^1.1.0-alpha.1",
-    "mocha": "^3.4.2",
-    "nodemon": "^1.17.5",
-    "request": "^2.87.0",
-    "request-promise": "^4.2.1"
+    "eslint": "^5.9.0",
+    "eslint-config-seasoned": "^0.0.2",
+    "istanbul": "^0.4.5",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.6",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2"
   }
 }
